Add SDL3 as git submodule with auto-build in build scripts
Converts SDL3 from a manually-cloned dependency to a git submodule
pinned at 85c297a. Build scripts now automatically init the submodule
and compile SDL3 via cmake on first run, eliminating manual setup steps.

--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,9 @@ Makefile
 Thumbs.db
 *.log
 
-# External libraries (user should fetch these)
-external/SDL3/
+# External library build outputs
+external/SDL3/build/
+external/SDL3/build-linux/
 
 # Compiler outputs
 *.o
